Added height and width to all videos and fixed fullsize link for cases front

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
 
             <div class="header-big__bg">
-                <video class="show-reel" preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
+                <video class="show-reel" preload="none" width="100%" height="100%" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
                     <source src="../assets/images/bg-web.webm" type="video/webm" />
                     <source src="../assets/images/bg-web.mp4" type="video/mp4" />
                 </video>
@@ -137,7 +137,7 @@
         --background-color: #E3E6EA;
         ">
         <a class="fullsize-link" href="/work/nori"></a>
-            <video class="case-intro__pic" preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
+            <video class="case-intro__pic" preload="none" width="100%" height="100%" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
                 <source src="../assets/images/web-nori3.webm" type="video/webm" />
                 <source src="../assets/images/web-nori3.mp4" type="video/mp4" />
             </video>
@@ -150,12 +150,6 @@
                         Nori Kit combines the best parts of productivity and design with a complete wireframe kit produced in Figma to help teams create beautifully designed prototypes in minutes.
                     </p>
                 </div>
-
-                <a href="/work/nori" 
-                class="btn btn--outline"
-            
-                style="--btn-color: #4050F7;
-                --btn-text: #fff;">Read more</a>
             </div>
         </article>
         
@@ -166,7 +160,7 @@
         ">
 
             <a class="fullsize-link" href="/work/thredx"></a>
-            <video class="case-intro__pic" preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
+            <video class="case-intro__pic" preload="none" width="100%" height="100%" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
                 <source src="../assets/images/thredx-video-header.webm" type="video/webm" />
                 <source src="../assets/images/thredx-video-header.mp4" type="video/mp4" />
             </video>
@@ -179,10 +173,6 @@
                         ThredX is a female-founded startup that want’s to change the digital fashion game. Technology has dramatically improved operations for retailers and brands, yet there is no technology for us on the other side.
                     </p>
                 </div>
-                <a href="/work/thredx" 
-                class="btn btn--outline" 
-                style="--btn-color: #141414;
-                --btn-text: #E8E8DF;">Read more</a>
             </div>
         </article>
 
@@ -207,11 +197,6 @@
                         How we helped a new start up to find their identity, art style and launch a beautiful e-commerce experience.
                     </p>
                 </div>
-
-                <a href="/work/hom" 
-                class="btn btn--outline"
-                style="--btn-color: #E6DAD8;
-                --btn-text: #DC5842;">Read more</a>
             </div>
         </article>
 
