--- a/work/index.html
+++ b/work/index.html
@@ -80,7 +80,7 @@
                 <article class="case-medium" data-aos="fade-up" data-aos-offset="0" data-aos-delay="500">
                     <div class="case-medium__inner">
                         <a class="fullsize-link" href="./nori"></a>
-                        <video class="case-intro__pic" preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
+                        <video class="case-intro__pic" preload="none" width="100%" height="100%" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
                             <source src="../assets/images/case-intro-full/web-nori3.webm" type="video/webm" />
                             <source src="../assets/images/case-intro-full/web-nori3.mp4" type="video/mp4" />
                         </video>
@@ -115,7 +115,7 @@
                 <article class="case-medium" data-aos="fade-up" data-aos-offset="0">
                     <div class="case-medium__inner">
                         <a class="fullsize-link" href="./glyfit"></a>
-                        <video class="case-intro__pic" preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
+                        <video class="case-intro__pic" preload="none" width="100%" height="100%" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
                             <source src="../assets/images/case-intro-full/glyfit.webm" type="video/webm" />
                             <source src="../assets/images/case-intro-full/glyfit.mp4" type="video/mp4" />
                         </video>
@@ -150,7 +150,7 @@
                     <article class="case-medium" data-aos="fade-up" data-aos-offset="0">
                         <div class="case-medium__inner">
                             <a class="fullsize-link" href="./mtn"></a>
-                            <video class="case-intro__pic" preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
+                            <video class="case-intro__pic" preload="none" width="100%" height="100%" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
                                 <source src="../assets/images/case-intro-full/mtn-case-intro-full.webm" type="video/webm" />
                                 <source src="../assets/images/case-intro-full/mtn-case-intro-full.mp4" type="video/mp4" />
                             </video>
