--- a/work/mtn.html
+++ b/work/mtn.html
@@ -70,7 +70,7 @@
             </nav>
         </header>
         <figure class="case-header">
-            <video preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
+            <video preload="none" width="100%" height="100%" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
                 <source src="../assets/images/case-intro-full/mtn-case-intro-full.webm" type="video/webm" />
                 <source src="../assets/images/case-intro-full/mtn-case-intro-full.mp4" type="video/mp4" />
             </video>
