--- a/work/thredx.html
+++ b/work/thredx.html
@@ -71,7 +71,7 @@
             </nav>
         </header>
         <figure class="case-header">
-            <video preload="none" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
+            <video preload="none" width="100%" height="100%" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
                 <source src="../assets/images/thredx-video-header.webm" type="video/webm" />
                 <source src="../assets/images/thredx-video-header.mp4" type="video/mp4" />
             </video>
