Removed favicon and fixed type

--- a/contact/index.html
+++ b/contact/index.html
@@ -79,7 +79,7 @@
             <div class="col-12 push-4-11">
                 <h1 g-component="SeparateText" class="big-header-one">Let’s create 
                 your next idea</h1>
-                <p class="animate__animated animate__fadeIn animate__delay-1s">We'll work closely with you to pin down the problem, and create a solution your customers they didn’t know they wanted.</p>
+                <p class="animate__animated animate__fadeIn animate__delay-1s">We'll work closely with you to pin down the problem, and create a solution your customers didn’t know they wanted.</p>
             </div>
 
             <div class="col-3 animate__animated animate__fadeIn animate__delay-1s push-4-8">
