Added new buddies case and tons of polish

--- a/work/hom.html
+++ b/work/hom.html
@@ -30,7 +30,7 @@
 </head>
 <body class="case hom">
 
-    <main class="wrapper transition-fade" id="swup" style="--background: #EBEAE7; --text: #DC5842;">
+    <main class="wrapper transition-fade" id="swup" style="--background: #EBEAE7; --text: #1e2524;">
         <header class="header" id="header">
             <figure class="logo">
                 <a href="/">
