More cases fix and front page fix

--- a/work/buddies.html
+++ b/work/buddies.html
@@ -87,7 +87,7 @@
 
             <div class="col col-6" data-aos-offset="0" data-aos="fade-up" data-aos-offset="0">
                 <p>
-                Buddies Gummies a women owned THC/CBD edibles company. The primary focus is quality edibles that are handmade and taste amazing. 
+                Buddies Gummies is a women owned and family-run THC/CBD edibles company. The primary focus is quality edibles that are handmade and taste amazing. 
                 </p>
                 <p>
                 Buddies Gummies are reinventing what edibles should be with a hand made touch and lots of love. Edibles that are naturally full of THC and CBD, natural flavouring and   ingredients. All for you to fully enjoy with a smile with people you love.
@@ -181,18 +181,6 @@
         </div>
 
         <div class="wrapper-inner wrapper-inner--no-margin-top wrapper-inner--dark wrapper-inner----footer-margin">
-            <div class="col col-6 col--text" data-aos-offset="0" data-aos="fade-up" data-aos-offset="0">
-                <h2 class="heading-one">The ins n'out of the digital part</h2>
-            </div>
-
-            <div class="col col-6" data-aos-offset="0" data-aos="fade-up" data-aos-offset="0">
-                <p>
-                    For the website we wanted to create something unique in the terms of the navigation, while also honouring the Brand ID as much as possible. 
-                </p>
-                <p>
-                    We focused heavily on creating a clean user experience with animations as the primary eye catcher. With the animations we also wanted to focus on clean and big typography. This together with clean visuals made the website shine from other competitors.
-                </p>
-            </div>
 
             <div class="col col-6" data-aos="fade-up" data-aos-offset="0">
                 <figure class="case-pic">
