--- a/work/thredx.html
+++ b/work/thredx.html
@@ -245,6 +245,33 @@
 
             <div class="col col-8 push-3-11" data-aos="fade-up" data-aos-offset="0">
                 <figure class="case-pic">
+                    <video class="case-vid" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
+                        <source src="../assets/images/thredx/home-real.webm" type="video/webm" />
+                        <source src="../assets/images/thredx/home-real.mp4" type="video/mp4" />
+                    </video>
+                </figure>
+            </div>
+
+            <div class="col col-8 push-3-11" data-aos="fade-up" data-aos-offset="0">
+                <figure class="case-pic">
+                    <video class="case-vid" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
+                        <source src="../assets/images/thredx/menu-real.webm" type="video/webm" />
+                        <source src="../assets/images/thredx/menu-real.mp4" type="video/mp4" />
+                    </video>
+                </figure>
+            </div>
+
+            <div class="col col-8 push-3-11" data-aos="fade-up" data-aos-offset="0">
+                <figure class="case-pic">
+                    <video class="case-vid" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
+                        <source src="../assets/images/thredx/features-real.webm" type="video/webm" />
+                        <source src="../assets/images/thredx/features-real.mp4" type="video/mp4" />
+                    </video>
+                </figure>
+            </div>
+
+            <div class="col col-8 push-3-11" data-aos="fade-up" data-aos-offset="0">
+                <figure class="case-pic">
                     <img class="lazyload" src="/assets/images/thredx/case-pic-9.webp" 
                     data-size="auto" 
                     data-src="/assets/images/thredx/case-pic-9.webp"
