Added package images for Buddies and polish of responsive behaviour

--- a/work/buddies.html
+++ b/work/buddies.html
@@ -184,145 +184,121 @@
 
             <div class="col col-6" data-aos="fade-up" data-aos-offset="0">
                 <figure class="case-pic">
-                    <img class="lazyload" src="/assets/images/thredx/case-pic-18.webp" 
+                    <img class="lazyload" src="/assets/images/buddies/package-1.webp" 
                     data-sizes="auto" 
-                    data-src="/assets/images/thredx/case-pic-18.webp"
-                    data-srcset="/assets/images/thredx/case-pic-18.webp 500w,
-                    /assets/images/thredx/case-pic-18.webp 640w,
-                    /assets/images/thredx/case-pic-18.webp 1024w"
-                    alt="thredx website 10">
+                    data-src="/assets/images/buddies/package-1.webp"
+                    data-srcset="/assets/images/buddies/package-1.webp 500w,
+                    /assets/images/buddies/package-1.webp 640w,
+                    /assets/images/buddies/package-1.webp 1024w"
+                    alt="buddies package">
                 </figure>
             </div>
 
             <div class="col col-6" data-aos="fade-up" data-aos-offset="0">
                 <figure class="case-pic">
-                    <img class="lazyload" src="/assets/images/thredx/case-pic-19.webp" 
+                    <img class="lazyload" src="/assets/images/buddies/package-2.webp" 
                     data-sizes="auto" 
-                    data-src="/assets/images/thredx/case-pic-19.webp"
-                    data-srcset="/assets/images/thredx/case-pic-19.webp 500w,
-                    /assets/images/thredx/case-pic-19.webp 640w,
-                    /assets/images/thredx/case-pic-19.webp 1024w"
-                    alt="thredx website 11">
+                    data-src="/assets/images/buddies/package-2.webp"
+                    data-srcset="/assets/images/buddies/package-2.webp 500w,
+                    /assets/images/buddies/package-2.webp 640w,
+                    /assets/images/buddies/package-2.webp 1024w"
+                    alt="buddies package-2">
                 </figure>
             </div>
 
-            <div class="col col-12" data-aos="fade-up" data-aos-offset="0">
+            <div class="col col-6" data-aos="fade-up" data-aos-offset="0">
                 <figure class="case-pic">
-                    <img class="lazyload" src="/assets/images/thredx/case-pic-20.webp" 
+                    <img class="lazyload" src="/assets/images/buddies/package-3.webp" 
                     data-sizes="auto" 
-                    data-src="/assets/images/thredx/case-pic-20.webp"
-                    data-srcset="/assets/images/thredx/case-pic-20.webp 500w,
-                    /assets/images/thredx/case-pic-20.webp 640w,
-                    /assets/images/thredx/case-pic-20.webp 1024w"
-                    alt="thredx website 12">
+                    data-src="/assets/images/buddies/package-3.webp"
+                    data-srcset="/assets/images/buddies/package-3.webp 500w,
+                    /assets/images/buddies/package-3.webp 640w,
+                    /assets/images/buddies/package-3.webp 1024w"
+                    alt="buddies package-3">
                 </figure>
             </div>
 
-            <div class="col col-8 push-3-11" data-aos="fade-up" data-aos-offset="0">
+            <div class="col col-6" data-aos="fade-up" data-aos-offset="0">
                 <figure class="case-pic">
-                    <img class="lazyload" src="/assets/images/thredx/case-pic-9.webp" 
-                    data-size="auto" 
-                    data-src="/assets/images/thredx/case-pic-9.webp"
-                    data-srcset="/assets/images/thredx/case-pic-9.webp 500w
-                    /assets/images/thredx/case-pic-9.webp 640w,
-                    /assets/images/thredx/case-pic-9.webp 1024w"
-                    alt="thredx website 13">
+                    <img class="lazyload" src="/assets/images/buddies/package-4.webp" 
+                    data-sizes="auto" 
+                    data-src="/assets/images/buddies/package-4.webp"
+                    data-srcset="/assets/images/buddies/package-4.webp 500w,
+                    /assets/images/buddies/package-4.webp 640w,
+                    /assets/images/buddies/package-4.webp 1024w"
+                    alt="buddies package-4">
                 </figure>
             </div>
 
-            <div class="col col-8 push-3-11" data-aos="fade-up" data-aos-offset="0">
+            <div class="col col-6" data-aos="fade-up" data-aos-offset="0">
                 <figure class="case-pic">
-                    <img class="lazyload" src="/assets/images/thredx/case-pic-10.webp" 
-                    data-size="auto" 
-                    data-src="/assets/images/thredx/case-pic-10.webp"
-                    data-srcset="/assets/images/thredx/case-pic-10.webp 500w
-                    /assets/images/thredx/case-pic-10.webp 640w,
-                    /assets/images/thredx/case-pic-10.webp 1024w"
-                    alt="thredx website 14">
+                    <img class="lazyload" src="/assets/images/buddies/package-5.webp" 
+                    data-sizes="auto" 
+                    data-src="/assets/images/buddies/package-5.webp"
+                    data-srcset="/assets/images/buddies/package-5.webp 500w,
+                    /assets/images/buddies/package-5.webp 640w,
+                    /assets/images/buddies/package-5.webp 1024w"
+                    alt="buddies package-5">
                 </figure>
             </div>
 
-            <div class="col col-8 push-3-11" data-aos="fade-up" data-aos-offset="0">
+            <div class="col col-6" data-aos="fade-up" data-aos-offset="0">
                 <figure class="case-pic">
-                    <img class="lazyload" src="/assets/images/thredx/case-pic-11.webp" 
-                    data-size="auto" 
-                    data-src="/assets/images/thredx/case-pic-11.webp"
-                    data-srcset="/assets/images/thredx/case-pic-11.webp 500w
-                    /assets/images/thredx/case-pic-11.webp 640w,
-                    /assets/images/thredx/case-pic-11.webp 1024w"
-                    alt="thredx website 15">
+                    <img class="lazyload" src="/assets/images/buddies/package-7.webp" 
+                    data-sizes="auto" 
+                    data-src="/assets/images/buddies/package-7.webp"
+                    data-srcset="/assets/images/buddies/package-7.webp 500w,
+                    /assets/images/buddies/package-7.webp 640w,
+                    /assets/images/buddies/package-7.webp 1024w"
+                    alt="buddies package-7">
                 </figure>
             </div>
 
-            <div class="col col-8 push-3-11" data-aos="fade-up" data-aos-offset="0">
+            <div class="col col-6" data-aos="fade-up" data-aos-offset="0">
                 <figure class="case-pic">
-                    <img class="lazyload" src="/assets/images/thredx/case-pic-12.webp" 
-                    data-size="auto" 
-                    data-src="/assets/images/thredx/case-pic-12.webp"
-                    data-srcset="/assets/images/thredx/case-pic-12.webp 500w
-                    /assets/images/thredx/case-pic-12.webp 640w,
-                    /assets/images/thredx/case-pic-12.webp 1024w"
-                    alt="thredx website 16">
+                    <img class="lazyload" src="/assets/images/buddies/package-10.webp" 
+                    data-sizes="auto" 
+                    data-src="/assets/images/buddies/package-10.webp"
+                    data-srcset="/assets/images/buddies/package-10.webp 500w,
+                    /assets/images/buddies/package-10.webp 640w,
+                    /assets/images/buddies/package-10.webp 1024w"
+                    alt="buddies package-10">
                 </figure>
             </div>
 
-            <div class="col col-8 push-3-11" data-aos="fade-up" data-aos-offset="0">
+            <div class="col col-6" data-aos="fade-up" data-aos-offset="0">
                 <figure class="case-pic">
-                    <img class="lazyload" src="/assets/images/thredx/case-pic-13.webp" 
-                    data-size="auto" 
-                    data-src="/assets/images/thredx/case-pic-13.webp"
-                    data-srcset="/assets/images/thredx/case-pic-13.webp 500w
-                    /assets/images/thredx/case-pic-13.webp 640w,
-                    /assets/images/thredx/case-pic-13.webp 1024w"
-                    alt="thredx website 17">
+                    <img class="lazyload" src="/assets/images/buddies/package-9.webp" 
+                    data-sizes="auto" 
+                    data-src="/assets/images/buddies/package-9.webp"
+                    data-srcset="/assets/images/buddies/package-9.webp 500w,
+                    /assets/images/buddies/package-9.webp 640w,
+                    /assets/images/buddies/package-9.webp 1024w"
+                    alt="buddies package-9">
                 </figure>
             </div>
 
-            <div class="col col-8 push-3-11" data-aos="fade-up" data-aos-offset="0">
+            <div class="col col-6" data-aos="fade-up" data-aos-offset="0">
                 <figure class="case-pic">
-                    <img class="lazyload" src="/assets/images/thredx/case-pic-14.webp" 
-                    data-size="auto" 
-                    data-src="/assets/images/thredx/case-pic-14.webp"
-                    data-srcset="/assets/images/thredx/case-pic-14.webp 500w
-                    /assets/images/thredx/case-pic-14.webp 640w,
-                    /assets/images/thredx/case-pic-14.webp 1024w"
-                    alt="thredx website 18">
+                    <img class="lazyload" src="/assets/images/buddies/package-11.webp" 
+                    data-sizes="auto" 
+                    data-src="/assets/images/buddies/package-11.webp"
+                    data-srcset="/assets/images/buddies/package-11.webp 500w,
+                    /assets/images/buddies/package-11.webp 640w,
+                    /assets/images/buddies/package-11.webp 1024w"
+                    alt="buddies package-11">
                 </figure>
             </div>
 
-            <div class="col col-8 push-3-11" data-aos="fade-up" data-aos-offset="0">
+            <div class="col col-6" data-aos="fade-up" data-aos-offset="0">
                 <figure class="case-pic">
-                    <img class="lazyload" src="/assets/images/thredx/case-pic-15.webp" 
-                    data-size="auto" 
-                    data-src="/assets/images/thredx/case-pic-15.webp"
-                    data-srcset="/assets/images/thredx/case-pic-15.webp 500w
-                    /assets/images/thredx/case-pic-15.webp 640w,
-                    /assets/images/thredx/case-pic-15.webp 1024w"
-                    alt="thredx website 19">
-                </figure>
-            </div>
-
-            <div class="col col-8 push-3-11" data-aos="fade-up" data-aos-offset="0">
-                <figure class="case-pic">
-                    <img class="lazyload" src="/assets/images/thredx/case-pic-16.webp" 
-                    data-size="auto" 
-                    data-src="/assets/images/thredx/case-pic-16.webp"
-                    data-srcset="/assets/images/thredx/case-pic-16.webp 500w
-                    /assets/images/thredx/case-pic-16.webp 640w,
-                    /assets/images/thredx/case-pic-16.webp 1024w"
-                    alt="thredx website 20">
-                </figure>
-            </div>
-
-            <div class="col col-8 push-3-11" data-aos="fade-up" data-aos-offset="0">
-                <figure class="case-pic">
-                    <img class="lazyload" src="/assets/images/thredx/case-pic-17.webp" 
-                    data-size="auto" 
-                    data-src="/assets/images/thredx/case-pic-17.webp"
-                    data-srcset="/assets/images/thredx/case-pic-17.webp 500w
-                    /assets/images/thredx/case-pic-17.webp 640w,
-                    /assets/images/thredx/case-pic-17.webp 1024w"
-                    alt="thredx website 21">
+                    <img class="lazyload" src="/assets/images/buddies/package-12.webp" 
+                    data-sizes="auto" 
+                    data-src="/assets/images/buddies/package-12.webp"
+                    data-srcset="/assets/images/buddies/package-12.webp 500w,
+                    /assets/images/buddies/package-12.webp 640w,
+                    /assets/images/buddies/package-12.webp 1024w"
+                    alt="buddies package-12">
                 </figure>
             </div>
         </div>
