--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <header class="header" id="header">
             <figure class="logo">
-                <a href="/">
+                <a aria-label="homepage" href="/">
                     <svg width="78" height="32" viewBox="0 0 78 32">
                         <g clip-path="url(#clip0_132_893)">
                         <path d="M21.7384 28.5564C23.0754 26.6425 23.7759 24.0947 24.3875 21.871C25.0613 19.4171 25.4987 16.8941 25.728 14.3605C25.8542 12.9654 26.0427 11.3949 25.7636 10.0051C25.5876 9.13223 25.04 8.53203 24.3573 8.35498C22.6025 7.74593 20.6983 8.47007 19.4431 9.81742C18.7462 10.5646 18.2075 11.5702 18.1506 12.6024C18.0848 13.7922 18.6182 14.6261 19.3916 15.4653C20.1099 16.2443 19.9463 17.0853 19.7649 18.0626C19.5125 19.4348 19.2209 20.7981 18.8955 22.1543C18.6698 23.0979 18.5026 24.3426 17.7275 25.0242C17.3737 25.3341 17.0536 25.3164 16.5967 25.3713C15.9229 25.4509 15.306 25.5465 14.7335 25.9378C12.5609 27.4233 14.2072 30.334 16.2678 30.897C18.444 31.4919 20.5205 30.3056 21.7402 28.5581L21.7384 28.5564Z" fill="#fff"/>
@@ -122,7 +122,7 @@
         </div>
 
         <section class="case-intro" data-aos="fade" data-aos-offset="0" id="buddies">
-            <a class="fullsize-link" href="/work/buddies"></a>
+            <a class="fullsize-link" href="/work/buddies" aria-label="Read more on Buddies Gummies"></a>
                 <video class="case-intro__pic" width="100%" height="100%" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
                     <source src="../assets/images/buddies.mp4" type="video/webm" />
                     <source src="../assets/images/buddies.mp4" type="video/mp4" />
@@ -144,7 +144,7 @@
             </section>
         <section class="case-intro" data-aos="fade" data-aos-offset="50" id="thredx">
 
-            <a class="fullsize-link" href="/work/thredx"></a>
+            <a class="fullsize-link" href="/work/thredx" aria-label="Read more on ThredX"></a>
             <video class="case-intro__pic" width="100%" height="100%" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
                 <source src="../assets/images/thredx-vid.mp4" type="video/webm" />
                 <source src="../assets/images/thredx-vid.mp4" type="video/mp4" />
@@ -167,7 +167,7 @@
         </section>
         
         <section class="case-intro" data-aos="fade" data-aos-offset="50"  id="nori">
-        <a class="fullsize-link" href="/work/nori"></a>
+        <a class="fullsize-link" href="/work/nori" aria-label="Read more on Nori Kit"></a>
             <video class="case-intro__pic" width="100%" height="100%" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
                 <source src="../assets/images/web-nori3.webm" type="video/webm" />
                 <source src="../assets/images/web-nori3.mp4" type="video/mp4" />
@@ -189,7 +189,7 @@
         </section>
 
         <section class="case-intro" data-aos="fade" data-aos-offset="50"  id="hom">
-        <a class="fullsize-link" href="/work/hom"></a>
+        <a class="fullsize-link" href="/work/hom" aria-label="Read more on Houses of Malmö"></a>
             <video class="case-intro__pic" width="100%" height="100%" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
                 <source src="../assets/images/hom-vid.mp4" type="video/webm" />
                 <source src="../assets/images/hom-vid.mp4" type="video/mp4" />
