Prevent work from being indexed by google

--- a/work/lightstage.html
+++ b/work/lightstage.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="robots" content="noindex">
     <title>Lightstage | Fjaka</title>
     <meta name="description" content="Fjaka is an award-winning creative studio. We specialise in creating brand identities, websites, apps, illustration and animations for clients of all kinds.">
 
