--- a/work/index.html
+++ b/work/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="robots" content="noindex">
     <title>Work | Fjaka</title>
     <meta name="description" content="All work No play">
 
