--- a/work/index.html
+++ b/work/index.html
@@ -78,15 +78,15 @@
         <div class="case-wrapper">
 
             <div class="case-row">
+
                 <article class="case-medium" data-aos="fade-up" data-aos-offset="0" data-aos-delay="500">
                     <div class="case-medium__inner">
-                        <a class="fullsize-link" href="./nori"></a>
+                        <a class="fullsize-link" href="./buddies"></a>
                         <video class="case-intro__pic" preload="none" width="100%" height="100%" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
-                            <source src="../assets/images/case-intro-full/web-nori3.webm" type="video/webm" />
-                            <source src="../assets/images/case-intro-full/web-nori3.mp4" type="video/mp4" />
+                            <source src="../assets/images/buddies.mp4" type="video/mp4" />
                         </video>
-                        <h2 class="heading-four">Stunning prototypes with Nori Kit</h2>
-                        <p class="case-intro-paragraph">How we made the smartest wireframe kit for Figma</p>
+                        <h2 class="heading-four">Buddies Gummies</h2>
+                        <p class="case-intro-paragraph">Branding for a women owned and family-run THC/CBD edibles company.</p>
                     </div>
                 </article>
 
@@ -113,7 +113,19 @@
             </article>
 
             <div class="case-row">
-                <article class="case-medium" data-aos="fade-up" data-aos-offset="0">
+                <article class="case-medium-large" data-aos="fade-up" data-aos-offset="0" data-aos-delay="500">
+                    <div class="case-medium__inner">
+                        <a class="fullsize-link" href="./nori"></a>
+                        <video class="case-intro__pic" preload="none" width="100%" height="100%" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
+                            <source src="../assets/images/case-intro-full/web-nori3.webm" type="video/webm" />
+                            <source src="../assets/images/case-intro-full/web-nori3.mp4" type="video/mp4" />
+                        </video>
+                        <h2 class="heading-four">Stunning prototypes with Nori Kit</h2>
+                        <p class="case-intro-paragraph">How we made the smartest wireframe kit for Figma</p>
+                    </div>
+                </article>
+
+                <article class="case-medium-large" data-aos="fade-up" data-aos-offset="0">
                     <div class="case-medium__inner">
                         <a class="fullsize-link" href="./glyfit"></a>
                         <video class="case-intro__pic" preload="none" width="100%" height="100%" loop muted playsinline autoplay="autoplay" style="pointer-events: none;">
@@ -122,15 +134,6 @@
                         </video>
                         <h2 class="heading-four">Special characters & symbols in a swoosh</h2>
                         <p class="case-intro-paragraph">No more googling after that specific arrow.</p>
-                    </div>
-                </article>
-
-                <article class="case-medium-large" data-aos="fade-up" data-aos-offset="0">
-                    <div class="case-medium__inner">
-                        <a class="fullsize-link" href="./lightstage"></a>
-                        <img src="/assets/images/case-intro-full/ls.webp" alt="thredx">
-                        <h2 class="heading-four">Light Stage rebranding</h2>
-                        <p class="case-intro-paragraph">A new face and name for a video creation SaaS</p>
                     </div>
                 </article>
             </div>
@@ -176,6 +179,15 @@
                         <img src="/assets/images/case-intro-full/fj-420.webp" alt="glasin">
                         <h2 class="heading-four">A visual campaign for Friend Jen & Co</h2>
                         <p class="case-intro-paragraph">A new campaign aimed at the holiday 420.</p>
+                    </div>
+                </article>
+
+                <article class="case-medium-large" data-aos="fade-up" data-aos-offset="0">
+                    <div class="case-medium__inner">
+                        <a class="fullsize-link" href="./lightstage"></a>
+                        <img src="/assets/images/case-intro-full/ls.webp" alt="thredx">
+                        <h2 class="heading-four">Light Stage rebranding</h2>
+                        <p class="case-intro-paragraph">A new face and name for a video creation SaaS</p>
                     </div>
                 </article>
             </div>
