Minor copy fix and fix broken link

--- a/about/index.html
+++ b/about/index.html
@@ -128,10 +128,10 @@
                         <li>2x Honourable Mention Awwwards</li>
                         <li>CSSDA Best UI design</li>
                         <li>CSSDA Best innovation</li>
-                        <li>CSSDA best UX design</li>
+                        <li>CSSDA Best UX design</li>
                         <li>2x Awwwards mobile excellence</li>
                         <li>CSSDA Site of the Day</li>
-                        <li>    Operaton Site of Day</li>
+                        <li>Operaton Site of Day</li>
                     </ul>
                 </div>
             </div>
