--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <source src="../assets/images/web-nori3.mp4" type="video/mp4" />
             </video>
 
-            <a href="/work/thredx" style="--btn-color: #040875; --btn-text: #fff;" class="btn btn--outline" title="work">Read more
+            <a href="/work/nori" style="--btn-color: #040875; --btn-text: #fff;" class="btn btn--outline" title="work">Read more
                 <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M3.33325 8.00065H12.6666M12.6666 8.00065L7.99992 3.33398M12.6666 8.00065L7.99992 12.6673" stroke="#040875" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
